--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#7E7878</color>
+    <color name="yellow">#FFC107</color>
+    <color name="blue">#2196F3</color>
 </resources>
