login screen removed , item xml file created,database class created,splash screen animate completed - 23/07/2023.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/splash_img"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/logo"
