--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:hint="@string/title"
+        android:textColorHint="@color/black"
         android:layout_marginStart="5dp"
         android:textColor="@color/black"
         android:textSize="22sp"
@@ -59,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="top"
+        android:textColorHint="@color/black"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/title_tv"
         app:layout_constraintBottom_toBottomOf="parent"
